# django-user_agents

./: .gitignore  README.rst  pyproject.toml  tox.ini
django_user_agents/: middleware.py  utils.py
django_user_agents/templatetags/: user_agents.py
tests/: conftest.py  test_user_agents.py  urls.py  views.py
tests/templates/: template_tags.html
