[tool.poetry]
name = "django-user-agents"
version = "0.5.0"
description = "Provides user agent detection"
authors = ["Selwin Ong", "Daniel Hawkins", "Christos Kopanos"]

[tool.poetry.dependencies]
python = ">=3.8"
PyYAML = "^6.0"
ua-parser = "^0.15.0"
user-agents = "^2.2.0"
Django = "^3.2 || ^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
pytest-django = "^4.5"
coverage = { extras = ["toml"], version = "^6.3.2" }

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=django_user_agents --cov-config=pyproject.toml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
